5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1585_2894.log
== TEST (2019-03-21 11:29:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + var

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:30:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + var

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
var = input("quantas unidades deseja adquirir?")

# Calculo do valor a ser pago, incluindo o frete:
frete = print(int(45))
total = print("var * jogo + frete")

# Impressao do valor total:
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
quantidade = 8
total = print("quantidade * jogo + frete")

# Impressao do valor total:
print("total")
-- OUTPUT:
quantidade * jogo + frete
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
quantidade = 8
total = print("quantidade * jogo + frete")

# Impressao do valor total:
print("total")
-- OUTPUT:
quantidade * jogo + frete
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total =8 * jogo + frete

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * 100 + frete

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:01:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 *  + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:01:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:22:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.157283
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:23:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.157919
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:23:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.177815
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:23:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.156912
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:24:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.133973
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:25:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.19684
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("*Qual o valor unitario do jogo?*"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:27:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("*Qual o valor unitario do jogo?*"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogo = 100
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.178984
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.156896
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:32:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.158602
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.14284
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.14252
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 90
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
765
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:35:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 90
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.190405
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
765
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
765
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
765
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:36:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.184815
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:37:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * jogo + frete
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:37:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:37:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.153244
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.246432
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.132068
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.108141
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1585/2894/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.171977
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.136143
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.206874
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.212409
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(float(total))
-- EXECUTION TIME:
0.19765
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:38:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.187251
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:40:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))
var = float(input(quantidade de jogos))
# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 6
    var = float(input(quantidade de jogos))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:40:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))
float(input(quantidade de jogos))
# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 6
    float(input(quantidade de jogos))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:40:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))
float(input("quantidade de jogos"))
# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:41:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))
float(input("quantidade de jogos"))
# Calculo do valor a ser pago, incluindo o frete:
jogo = 100
frete = 45
total = (8 * jogo) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.148052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * var) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:42:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * var) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.196359
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
